--- a/app/src/main/res/layout/sample_login.xml
+++ b/app/src/main/res/layout/sample_login.xml
@@ -73,7 +73,7 @@
                 android:layout_marginTop="1dp"
                 android:layout_marginEnd="16dp"
                 android:text="Edit"
-                android:textColor="@color/purple"
+                android:textColor="@color/black"
                 android:textSize="24sp"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
